(library
 (name graded_types)
 ;; (public_name graded-types)
 (modules types subtype join ast env interp_common interp interp_gradual
          fixpoint ghost interp_ghost parser))

(executable
 (name main)
 ;; (public_name graded-typing)
 (libraries graded_types qcheck-core qcheck)
 (modules main))
